ric-platform/50-RIC-Platform/helm/ingress-appmgr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ric-ingress-appmgr
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /appmgr
        backend:
          serviceName: r0-appmgr
          servicePort: 8080
