ric-platform/50-RIC-Platform/helm/ingress-e2mgr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ric-ingress-e2mgr
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /e2mgr
        backend:
          serviceName: r0-e2mgr
          servicePort: 3800
