ric-platform/50-RIC-Platform/helm/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ric-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /e2mgr
        backend:
          serviceName: r0-e2mgr
          servicePort: 3800
      - path: /appmgr
        backend:
          serviceName: r0-appmgr
          servicePort: 8080
